# game-of-life-bench

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/game_of_life_bench/: __init__.py  benchmark.py  config.py  leaderboard.py  life.py  main.py  rules.py  scoring.py  storage.py
src/game_of_life_bench/models/: __init__.py  openrouter.py
src/game_of_life_bench/web/: app.py
src/game_of_life_bench/web/static/: app.js  benchmark.js  styles.css
src/game_of_life_bench/web/templates/: benchmark.html  index.html
tests/: test_life.py
