[project]
name = "game-of-life-bench"
version = "0.1.0"
description = "LLM benchmark harness for cellular automata initial-state design"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.41.0",
]

[project.scripts]
game-of-life-bench = "game_of_life_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game_of_life_bench"]
