[project]
name = "game-of-life-bench"
version = "0.1.1"
description = "LLM benchmark harness for cellular automata initial-state design"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Akshit Sinha" },
]
keywords = [
    "benchmark",
    "cellular-automata",
    "conway",
    "game-of-life",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pydantic-settings>=2.13.1",
]

[project.urls]
Homepage = "https://github.com/viciousAegis/game-of-life-bench"
Repository = "https://github.com/viciousAegis/game-of-life-bench"
Issues = "https://github.com/viciousAegis/game-of-life-bench/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.41.0",
]

[project.scripts]
game-of-life-bench = "game_of_life_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game_of_life_bench"]
